--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
           <div class="carousel-inner">
             <div
               class="carousel-item active"
-              style="background-image: url(img/slider/slider_2.jpg)"
+              style="background-image: url(img/slider/euro_2.jpg)"
             >
               <div class="container">
                 <p>Head Office Location</p>
@@ -160,7 +160,7 @@
             </div>
             <div
               class="carousel-item"
-              style="background-image: url(img/slider/slider_1.jpg)"
+              style="background-image: url(img/slider/euro_1.jpg)"
             >
               <div class="container">
                 <p>VISIT US AT OUR MAIN OFFICE</p>
@@ -173,7 +173,7 @@
             </div>
             <div
               class="carousel-item"
-              style="background-image: url(img/slider/slider_3.jpg)"
+              style="background-image: url(img/slider/euro_3.jpg)"
             >
               <div class="container">
                 <p>The Most Competitive Rates just for you!</p>
@@ -247,7 +247,7 @@
               <div class="col-lg-4 col-md-6 position-relative pb-2">
                 <div class="card bg-dark text-white">
                   <img
-                    src="./img/euro_downtown.png"
+                    src="./img/euro_downtown.jpg"
                     class="card-img"
                     alt="..."
                     style="background-size: cover"
@@ -266,7 +266,7 @@
               <div class="col-lg-4 col-md-6 position-relative pb-2">
                 <div class="card bg-dark text-white">
                   <img
-                    src="./img/euro_main_1.png"
+                    src="./img/euro_main_1.jpg"
                     class="card-img"
                     alt="..."
                     style="background-size: cover"
@@ -304,7 +304,10 @@
       </section>
 
       <section
-        style="background-image: url(img/slider/bank-notes-941246_1920.jpg)"
+        style="
+          background-image: url(img/dollar-three.jpg);
+          background-size: cover;
+        "
       >
         <div class="background-container">
           <div class="container pt-5 pb-5">
@@ -336,7 +339,7 @@
               <h1>BEST RATES</h1>
               <p>
                 Our team is working around the clock tomake sure we secure the
-                best ratesfor the currency you need
+                best rates for the currency you need
               </p>
             </div>
             <div class="col-md-3"></div>
@@ -501,6 +504,7 @@
             <ul class="list-unstyled d-flex flex-grow-1 justify-content-start">
               <li>
                 <a
+                  target="_blank"
                   class="link-dark"
                   href="https://www.facebook.com/EuroExchangeUSA/"
                 >
@@ -509,6 +513,7 @@
               </li>
               <li class="ms-1">
                 <a
+                  target="_blank"
                   class="link-dark"
                   href="https://www.instagram.com/euroexchange/"
                   ><i class="bi bi-instagram" style="font-size: 2rem"></i
@@ -516,6 +521,7 @@
               </li>
               <li class="ms-1">
                 <a
+                  target="_blank"
                   class="link-dark"
                   href="https://www.linkedin.com/company/euroexchangegroup/about/"
                   ><i class="bi bi-linkedin" style="font-size: 2rem"></i
