--- a/locations.html
+++ b/locations.html
@@ -375,6 +375,7 @@
             <ul class="list-unstyled d-flex flex-grow-1 justify-content-start">
               <li>
                 <a
+                  target="_blank"
                   class="link-dark"
                   href="https://www.facebook.com/EuroExchangeUSA/"
                 >
@@ -383,6 +384,7 @@
               </li>
               <li class="ms-1">
                 <a
+                  target="_blank"
                   class="link-dark"
                   href="https://www.instagram.com/euroexchange/"
                   ><i class="bi bi-instagram" style="font-size: 2rem"></i
@@ -390,6 +392,7 @@
               </li>
               <li class="ms-1">
                 <a
+                  target="_blank"
                   class="link-dark"
                   href="https://www.linkedin.com/company/euroexchangegroup/about/"
                   ><i class="bi bi-linkedin" style="font-size: 2rem"></i
