--- a/currency-exchange.html
+++ b/currency-exchange.html
@@ -312,6 +312,7 @@
             <ul class="list-unstyled d-flex flex-grow-1 justify-content-start">
               <li>
                 <a
+                  target="_blank"
                   class="link-dark"
                   href="https://www.facebook.com/EuroExchangeUSA/"
                 >
@@ -320,6 +321,7 @@
               </li>
               <li class="ms-1">
                 <a
+                  target="_blank"
                   class="link-dark"
                   href="https://www.instagram.com/euroexchange/"
                   ><i class="bi bi-instagram" style="font-size: 2rem"></i
@@ -327,6 +329,7 @@
               </li>
               <li class="ms-1">
                 <a
+                  target="_blank"
                   class="link-dark"
                   href="https://www.linkedin.com/company/euroexchangegroup/about/"
                   ><i class="bi bi-linkedin" style="font-size: 2rem"></i
