--- a/location-doral.html
+++ b/location-doral.html
@@ -373,6 +373,7 @@
             <ul class="list-unstyled d-flex flex-grow-1 justify-content-start">
               <li>
                 <a
+                  target="_blank"
                   class="link-dark"
                   href="https://www.facebook.com/EuroExchangeUSA/"
                 >
@@ -381,6 +382,7 @@
               </li>
               <li class="ms-1">
                 <a
+                  target="_blank"
                   class="link-dark"
                   href="https://www.instagram.com/euroexchange/"
                   ><i class="bi bi-instagram" style="font-size: 2rem"></i
@@ -388,6 +390,7 @@
               </li>
               <li class="ms-1">
                 <a
+                  target="_blank"
                   class="link-dark"
                   href="https://www.linkedin.com/company/euroexchangegroup/about/"
                   ><i class="bi bi-linkedin" style="font-size: 2rem"></i
