--- a/currency-exchange.html
+++ b/currency-exchange.html
@@ -309,11 +309,13 @@
 
           <div class="col-md-2 text-start">
             <h5>Follow us</h5>
-            <ul class="list-unstyled d-flex flex-grow-1 justify-content-start">
+            <ul
+              class="list-unstyled d-flex flex-grow-1 justify-content-md-center"
+            >
               <li>
                 <a
                   target="_blank"
-                  class="link-dark"
+                  class="btn btn-sm border-0 btn-outline-secondary"
                   href="https://www.facebook.com/EuroExchangeUSA/"
                 >
                   <i class="bi bi-facebook" style="font-size: 2rem"></i>
@@ -322,7 +324,7 @@
               <li class="ms-1">
                 <a
                   target="_blank"
-                  class="link-dark"
+                  class="btn btn-sm border-0 btn-outline-secondary"
                   href="https://www.instagram.com/euroexchange/"
                   ><i class="bi bi-instagram" style="font-size: 2rem"></i
                 ></a>
@@ -330,7 +332,7 @@
               <li class="ms-1">
                 <a
                   target="_blank"
-                  class="link-dark"
+                  class="btn btn-sm border-0 btn-outline-secondary"
                   href="https://www.linkedin.com/company/euroexchangegroup/about/"
                   ><i class="bi bi-linkedin" style="font-size: 2rem"></i
                 ></a>
