--- a/location-doral.html
+++ b/location-doral.html
@@ -253,14 +253,16 @@
 
                 <p>
                   PHONE:
-                  <a class="text-decoration-none" href="telto:+13053772536"
+                  <a
+                    class="text-decoration-none link-secondary"
+                    href="tel:+13053772536"
                     >305.377.2536</a
                   >
                 </p>
                 <p>
                   EMAIL:
                   <a
-                    class="text-decoration-none"
+                    class="text-decoration-none link-secondary"
                     href="mailto:info@euroexchangeusa.com"
                     >info@euroexchangeusa.com</a
                   >
@@ -268,7 +270,7 @@
                 <ul class="list-unstyled d-flex justify-content-center">
                   <li class="ms-3">
                     <a
-                      class="link-dark"
+                      class="btn btn-sm border-0 btn-outline-secondary"
                       href="https://www.facebook.com/EuroExchangeUSA/"
                     >
                       <i class="bi bi-facebook" style="font-size: 2rem"></i>
@@ -276,14 +278,14 @@
                   </li>
                   <li class="ms-3">
                     <a
-                      class="link-dark"
+                      class="btn btn-sm border-0 btn-outline-secondary"
                       href="https://www.instagram.com/euroexchange/"
                       ><i class="bi bi-instagram" style="font-size: 2rem"></i
                     ></a>
                   </li>
                   <li class="ms-3">
                     <a
-                      class="link-dark"
+                      class="btn btn-sm border-0 btn-outline-secondary"
                       href="https://www.linkedin.com/company/euroexchangegroup/about/"
                       ><i class="bi bi-linkedin" style="font-size: 2rem"></i
                     ></a>
@@ -370,11 +372,13 @@
 
           <div class="col-md-2 text-start">
             <h5>Follow us</h5>
-            <ul class="list-unstyled d-flex flex-grow-1 justify-content-start">
+            <ul
+              class="list-unstyled d-flex flex-grow-1 justify-content-md-center"
+            >
               <li>
                 <a
                   target="_blank"
-                  class="link-dark"
+                  class="btn btn-sm border-0 btn-outline-secondary"
                   href="https://www.facebook.com/EuroExchangeUSA/"
                 >
                   <i class="bi bi-facebook" style="font-size: 2rem"></i>
@@ -383,7 +387,7 @@
               <li class="ms-1">
                 <a
                   target="_blank"
-                  class="link-dark"
+                  class="btn btn-sm border-0 btn-outline-secondary"
                   href="https://www.instagram.com/euroexchange/"
                   ><i class="bi bi-instagram" style="font-size: 2rem"></i
                 ></a>
@@ -391,7 +395,7 @@
               <li class="ms-1">
                 <a
                   target="_blank"
-                  class="link-dark"
+                  class="btn btn-sm border-0 btn-outline-secondary"
                   href="https://www.linkedin.com/company/euroexchangegroup/about/"
                   ><i class="bi bi-linkedin" style="font-size: 2rem"></i
                 ></a>
