--- a/locations.html
+++ b/locations.html
@@ -265,12 +265,27 @@
                   (with purchase)
                 </p>
 
-                <p>PHONE: 305.377.2536</p>
-                <p>EMAIL: info@euroexchangeusa.com</p>
+                <p>
+                  PHONE:
+                  <a
+                    class="text-decoration-none link-secondary"
+                    href="tel:+13053772536"
+                    >305.377.2536</a
+                  >
+                </p>
+                <p>
+                  EMAIL:
+                  <a
+                    class="text-decoration-none link-secondary"
+                    href="mailto:info@euroexchangeusa.com"
+                    >info@euroexchangeusa.com</a
+                  >
+                </p>
                 <ul class="list-unstyled d-flex justify-content-center">
                   <li class="ms-3">
                     <a
-                      class="link-dark"
+                      target="_blank"
+                      class="btn btn-sm border-0 btn-outline-secondary"
                       href="https://www.facebook.com/EuroExchangeUSA/"
                     >
                       <i class="bi bi-facebook" style="font-size: 2rem"></i>
@@ -278,14 +293,16 @@
                   </li>
                   <li class="ms-3">
                     <a
-                      class="link-dark"
+                      target="_blank"
+                      class="btn btn-sm border-0 btn-outline-secondary"
                       href="https://www.instagram.com/euroexchange/"
                       ><i class="bi bi-instagram" style="font-size: 2rem"></i
                     ></a>
                   </li>
                   <li class="ms-3">
                     <a
-                      class="link-dark"
+                      target="_blank"
+                      class="btn btn-sm border-0 btn-outline-secondary"
                       href="https://www.linkedin.com/company/euroexchangegroup/about/"
                       ><i class="bi bi-linkedin" style="font-size: 2rem"></i
                     ></a>
@@ -372,11 +389,13 @@
 
           <div class="col-md-2 text-start">
             <h5>Follow us</h5>
-            <ul class="list-unstyled d-flex flex-grow-1 justify-content-start">
+            <ul
+              class="list-unstyled d-flex flex-grow-1 justify-content-md-center"
+            >
               <li>
                 <a
                   target="_blank"
-                  class="link-dark"
+                  class="btn btn-sm border-0 btn-outline-secondary"
                   href="https://www.facebook.com/EuroExchangeUSA/"
                 >
                   <i class="bi bi-facebook" style="font-size: 2rem"></i>
@@ -385,7 +404,7 @@
               <li class="ms-1">
                 <a
                   target="_blank"
-                  class="link-dark"
+                  class="btn btn-sm border-0 btn-outline-secondary"
                   href="https://www.instagram.com/euroexchange/"
                   ><i class="bi bi-instagram" style="font-size: 2rem"></i
                 ></a>
@@ -393,7 +412,7 @@
               <li class="ms-1">
                 <a
                   target="_blank"
-                  class="link-dark"
+                  class="btn btn-sm border-0 btn-outline-secondary"
                   href="https://www.linkedin.com/company/euroexchangegroup/about/"
                   ><i class="bi bi-linkedin" style="font-size: 2rem"></i
                 ></a>
