--- a/contact-us.html
+++ b/contact-us.html
@@ -268,7 +268,7 @@
 
                   <p>
                     PHONE:<a
-                      class="text-decoration-none"
+                      class="text-decoration-none text-decoration-none link-secondary"
                       href="tel:+13053772536"
                     >
                       305.377.2536</a
@@ -277,7 +277,7 @@
                   <p>
                     EMAIL:
                     <a
-                      class="text-decoration-none"
+                      class="text-decoration-none text-decoration-none link-secondary"
                       href="mailto:info@euroexchangeusa.com"
                       >info@euroexchangeusa.com</a
                     >
@@ -285,7 +285,8 @@
                   <ul class="list-unstyled d-flex justify-content-center">
                     <li class="ms-3">
                       <a
-                        class="link-dark"
+                        target="_blank"
+                        class="btn btn-sm border-0 btn-outline-secondary"
                         href="https://www.facebook.com/EuroExchangeUSA/"
                       >
                         <i class="bi bi-facebook" style="font-size: 2rem"></i>
@@ -293,14 +294,16 @@
                     </li>
                     <li class="ms-3">
                       <a
-                        class="link-dark"
+                        target="_blank"
+                        class="btn btn-sm border-0 btn-outline-secondary"
                         href="https://www.instagram.com/euroexchange/"
                         ><i class="bi bi-instagram" style="font-size: 2rem"></i
                       ></a>
                     </li>
                     <li class="ms-3">
                       <a
-                        class="link-dark"
+                        target="_blank"
+                        class="btn btn-sm border-0 btn-outline-secondary"
                         href="https://www.linkedin.com/company/euroexchangegroup/about/"
                         ><i class="bi bi-linkedin" style="font-size: 2rem"></i
                       ></a>
@@ -820,11 +823,13 @@
 
           <div class="col-md-2 text-start">
             <h5>Follow us</h5>
-            <ul class="list-unstyled d-flex flex-grow-1 justify-content-start">
+            <ul
+              class="list-unstyled d-flex flex-grow-1 justify-content-md-center"
+            >
               <li>
                 <a
                   target="_blank"
-                  class="link-dark"
+                  class="btn btn-sm border-0 btn-outline-secondary"
                   href="https://www.facebook.com/EuroExchangeUSA/"
                 >
                   <i class="bi bi-facebook" style="font-size: 2rem"></i>
@@ -833,7 +838,7 @@
               <li class="ms-1">
                 <a
                   target="_blank"
-                  class="link-dark"
+                  class="btn btn-sm border-0 btn-outline-secondary"
                   href="https://www.instagram.com/euroexchange/"
                   ><i class="bi bi-instagram" style="font-size: 2rem"></i
                 ></a>
@@ -841,7 +846,7 @@
               <li class="ms-1">
                 <a
                   target="_blank"
-                  class="link-dark"
+                  class="btn btn-sm border-0 btn-outline-secondary"
                   href="https://www.linkedin.com/company/euroexchangegroup/about/"
                   ><i class="bi bi-linkedin" style="font-size: 2rem"></i
                 ></a>
