--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <img
             src="img/euro_logo_white.png"
             width="250px"
-            alt=""
+            alt="EuroExchange Logo"
             style="--bs-bg-opacity: 1"
           />
         </a>
@@ -249,7 +249,7 @@
                   <img
                     src="./img/euro_downtown.jpg"
                     class="card-img"
-                    alt="..."
+                    alt="EuroExchange Downtown office"
                     style="background-size: cover"
                   />
                   <div class="card-img-overlay visit-img-bg">
@@ -268,7 +268,7 @@
                   <img
                     src="./img/euro_main_1.jpg"
                     class="card-img"
-                    alt="..."
+                    alt="EuroExchange Main Office"
                     style="background-size: cover"
                   />
                   <div class="card-img-overlay visit-img-bg">
@@ -286,7 +286,7 @@
                   <img
                     src="./img/euro_doral_1.png"
                     class="card-img"
-                    alt="..."
+                    alt="EuroExchange Doral Office"
                     style="background-image: cover"
                   />
                   <div class="card-img-overlay visit-img-bg">
