--- a/location-doral.html
+++ b/location-doral.html
@@ -32,7 +32,7 @@
           <img
             src="img/euro_logo_white.png"
             width="250px"
-            alt=""
+            alt="EuroExchange Logo"
             style="--bs-bg-opacity: 1"
           />
         </a>
