--- a/services.html
+++ b/services.html
@@ -32,7 +32,7 @@
           <img
             src="img/euro_logo_white.png"
             width="250px"
-            alt=""
+            alt="EuroExchange logo"
             style="--bs-bg-opacity: 1"
           />
         </a>
@@ -179,7 +179,12 @@
                 </p>
               </div>
               <div class="col-md-4">
-                <img class="rounded" src="img/buy.jpg" width="400px" alt="" />
+                <img
+                  class="rounded"
+                  src="img/buy.jpg"
+                  width="400px"
+                  alt="Buy Sell service"
+                />
               </div>
             </div>
             <div class="row mt-5 mb-5">
